removed swp file, changed dummy hostpath as per review comment
Signed-off-by: Vishnu Itta <vishnu.itta@rubrik.com>

--- a/scale-test/fioload-template.yaml
+++ b/scale-test/fioload-template.yaml
@@ -40,7 +40,7 @@ spec:
   volumes:
   - name: results-volume
     hostPath:
-      path: /home/vitta/fio-results/@testid@
+      path: /tmp/fio-results/@testid@
       type: DirectoryOrCreate
   - name: data-volume
     persistentVolumeClaim:
